-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 4.13.0-beta1
-
None
Relying on the PathChooser::rawPathChanged handlers to initially validate default paths with clean settings does not work (I think) because of a mix of interdependent (via m_androidConfig) synchronous and asynchronous validations.
Only after touching a path in the UI, the validation works.
For Gerrit Dashboard: QTCREATORBUG-24372 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
308252,6 | Android: Fix initial validating with clean settings and default paths | 4.13 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |